Revision history for Perl extension CGI::Uploader.

    [ENHANCEMENTS]
    - A new 'temp_dir' option has been added to allow to you set your own
      temporary directory. (Jeff MacDonald)

2.11 Mon Dec 19 20:18:00 EST 2005
    [BUG FIXES]
    - There were was confusion in the 2.1 release as to whether the new API
      for gen_thumb() took a hash or hashref as input. The code, tests and docs
      have all been updated to agree: It's a hashref. Thanks to bignose, who
      wrestled this one.

2.1 Sun Dec 18 21:39:23 EST 2005
    [ENHANCEMENTS]
    - Further simplified necessary spec API, while maintaining backwards
      compatibility.  Specifying a transformation method for a generated file
      can now by this simple: 

       gen_files => {
           photo_thumbnail =>  gen_thumb({ w => 100, h => 100}),
       }


2.0 Sat Dec 17 23:12:35 EST 2005

    [ENHANCEMENTS]
    - Previously the extension and MIME type were inherited
      by generated files. Now the metadata for generated files
      is extracted directly from them. This should be useful
      if you want to create thumbnails in a different image format
      than the large images. 

    - A cleaner and simpler API for calling gen_thumb() and other potential
      transform_methods has been introduced. The new syntax looks like this:

         transform_method => gen_thumb({ w => 100, h => 100 }),
   
      The old syntax is still supported.    

    - "gen_thumb()" can now return the Image/Graphics::Magick object as a
      second argument. This may not be useful outside of the test suite...

    [BUG FIXES]
    - Image::Magick is no longer required to install CGI::Uploader, just
      recommended.

    - If an uploaded was updated and had its MIME type changed in the process,
      the old file was left on the file system. Fixed. 

    - If 'up_table_map' was used to modify the name of the extension field, 
      then transform_meta() would return empty values for the extensions. Fixed.
